# BeachBox

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
romdisk/: includeme
romdisk/audio/: coin.adx  gameover.adx  gamescene.adx  menu_song.adx  slowdown.adx  teleport.adx
src/: audio.c  audio.cpp  audio.h  background.c  background.h  config.h  controller.c  controller.cpp  controller.h  creditsbounce.c  hats.c  hats.h  helper_functions.c  helper_functions.cpp  helper_functions.h  objects.c  objects.h  player.c  player.cpp  player.h  save.c  save.h  scene.c  scene.h  timer.c  timer.h  ui.c  ui.cpp  ui.h  upgrades.h  vmu.c  vmu.cpp  vmu.h  vmu_animations.h  vmu_frames.h
src/scenes/: credits.c  credits.cpp  credits.h  game.c  game.h  loading.c  loading.h  mainmenu.c  mainmenu.cpp  mainmenu.h  options.c  options.h  raylogo.c  raylogo.h  shop.c  shop.cpp  shop.h  unlockables.c  unlockables.h
